<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">豆瓣电影</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 首页相关字符串 -->
    <string name="show">上映</string>
    <string name="cinima">影院</string>
    <string name="isee">我看</string>
    <!-- 颜色相关 -->
    <color name="black">#ee000000</color>
    <color name="white">#eeffffff</color>
    <color name="colorless">#00000000</color>
    <color name="lightcolor">#ffffffff</color>
    <color name="btcolor">#ff9900</color>
    <color name="gray">#cccccc</color>
    <color name="red">#ff0000</color>
    <color name="greed">#00ff00</color>
    <color name="blue">#78cdd1</color>
    <!-- 红赤色 -->
    <color name="red2">#d64f44</color>
    <!-- 向日葵色 -->
    <color name="green2">#ffc20e</color>
    <!-- 空色 -->
    <color name="blue2">#90d7ec</color>
    <!-- 洗柿 色 -->
    <color name="red3">#c99979</color>

    <string name="title_activity_main">MainActivity</string>
    <string name="mainpagetext">豆瓣电影</string>
    <string name="maincontenttext">看完一部电影，感悟一段人生</string>
    <string name="mainloadtext">载入中</string>
    <!-- 电影界面相关文字 -->
    <string name="city">获取中</string>
    <string name="furtureshow">获取即将上映电影</string>
    <string name="furturetext">------以下为即将上映的电影------</string>
    <!-- 影院界面相关文字 -->
    <string name="resortCinema">常去的影院</string>
    <string name="nearbyCinema">附近的影院</string>
    <string name="clickToAdd">点击添加我常去的影院</string>
    <string name="getMyPos">点击获取我的位置</string>
    <string name="localCinema">搜索本地影院</string>
    <!-- 我看界面相关文字 -->
    <string name="myTicket">我的电影票</string>
    <string name="myCoupon">我的优惠券</string>
    <string name="getCoupon">兑换优惠券</string>
    <string name="wantToSee">想看、看过的电影</string>
    <string name="other">其他</string>
    <string name="movie">电影</string>
    <string name="top250">豆瓣电影Top250</string>
    <string name="youlike">猜你会喜欢的电影</string>
    <string name="title_activity_movie_content">MovieContentActivity</string>

    <!-- 电影具体内容界面 -->


    <!-- 主页 -->
    <string name="introduce">介绍</string>
    <string name="image">图片</string>
    <string name="shortcomment">短评</string>
    <string name="comment">影评</string>
    <!-- 介绍界面 -->
    <string name="choice">选座购票</string>
    <string name="iwantsee">想看的</string>
    <string name="ihavesee">看过了</string>
    <string name="title_activity_comment_detail">CommentDetail</string>
    <string name="title_activity_big_image">BigImageActivity</string>

</resources>
