<?xml version="1.0" encoding="utf-8"?>
<!-- viewpager不支持这个，无语 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/movie">
        <Preference 
            android:key="@string/myTicket"
            android:title="@string/myTicket"
            />
        <Preference 
            android:key="@string/myCoupon"
            android:title="@string/myCoupon"
            />
        <Preference 
            android:key="@string/getCoupon"
            android:title="@string/getCoupon"
            />
        <Preference 
            android:key="@string/wantToSee"
            android:title="@string/wantToSee"
            />
    </PreferenceCategory>
	<PreferenceCategory 
    android:title="@string/other">
   		<Preference 
        	android:key="@string/top250"
        	android:title="@string/top250"/>
    	<Preference 
        	android:key="@string/youlike"
        	android:title="@string/youlike"/>
	</PreferenceCategory>
</PreferenceScreen>
