<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffeecc"
    android:gravity="left" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        />
     <Button
        android:id="@+id/myTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myTicket"
        style="@style/TextStyle.BigBlackText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorless"
        android:gravity="left|center_vertical"
        />
     <View 
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray"
         />
     <Button
        android:id="@+id/myCoupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myCoupon"
        style="@style/TextStyle.BigBlackText"
        android:layout_marginLeft="10dp"
        android:background="@color/colorless"
        android:gravity="left|center_vertical"
        />
     <View 
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray"
         />
     <Button
        android:id="@+id/getCoupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getCoupon"
        style="@style/TextStyle.BigBlackText"
        android:layout_marginLeft="10dp"
        android:background="@color/colorless"
        android:gravity="left|center_vertical"
        />
      <View 
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray"
		 />
      <Button
        android:id="@+id/wantToSee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wantToSee"
        style="@style/TextStyle.BigBlackText"
        android:layout_marginLeft="10dp"
        android:background="@color/colorless"
        android:gravity="left|center_vertical"
        />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        
        />
      <Button
        android:id="@+id/top250"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top250"
        style="@style/TextStyle.BigBlackText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorless"
        android:gravity="left|center_vertical"
        />
      <View 
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray"
         />
      <Button
        android:id="@+id/youlike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youlike"
        style="@style/TextStyle.BigBlackText"
        android:layout_marginLeft="10dp"
        android:background="@color/colorless"
        android:gravity="left|center_vertical"
        />
</LinearLayout>
