<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieContentActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="@color/black">
    	<LinearLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:weightSum="1"
     		>
    		<Button 
        		android:id="@+id/intorduce"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/introduce"
        		android:layout_weight="0.25"
        		style="@style/TextStyle"
        		android:paddingTop="10dp"
        		android:paddingBottom="10dp"
       	 		android:background="@drawable/mainbutton"
        		/>
    		<View
		        android:layout_width="1dp"
		        android:layout_height="20dp"
		        android:background="@color/white"
		        android:layout_marginTop="15dp"
		        android:layout_marginBottom="10dp"
        		/>
    		<Button 
		        android:id="@+id/image"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/image"
		        android:layout_weight="0.25"
		        style="@style/TextStyle"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:background="@drawable/mainbutton"
        		/>
    		<View
		        android:layout_width="1dp"
		        android:layout_height="20dp"
		        android:background="@color/white"
		        android:layout_marginTop="15dp"
		        android:layout_marginBottom="10dp"
        		/>
    		<Button 
		        android:id="@+id/shortcomment"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/shortcomment"
		        android:layout_weight="0.25"
		        style="@style/TextStyle"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:background="@drawable/mainbutton"
		        />
     		<View
		        android:layout_width="1dp"
		        android:layout_height="20dp"
		        android:background="@color/white"
		        android:layout_marginTop="15dp"
		        android:layout_marginBottom="10dp"
		        />
    		<Button 
		        android:id="@+id/comment"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/comment"
		        android:layout_weight="0.25"
		        style="@style/TextStyle"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:background="@drawable/mainbutton"
		        />
		</LinearLayout>
		<ImageView
		    android:layout_width="80dp"
		    android:layout_height="5dp"
		    android:background="@color/white"
		    android:id="@+id/cursor"
		    android:contentDescription="@string/app_name"
		    />
	</LinearLayout>
	<android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewpage2"
        />
</LinearLayout>
