<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="@color/black">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
    <Button 
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:layout_weight="0.33"
        style="@style/TextStyle"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/mainbutton"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <Button 
        android:id="@+id/cinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinima"
        android:layout_weight="0.33"
        style="@style/TextStyle"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/mainbutton"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <Button 
        android:id="@+id/isee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isee"
        android:layout_weight="0.33"
        style="@style/TextStyle"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/mainbutton"
        />
	</LinearLayout>
	<ImageView
	    android:layout_width="107dp"
	    android:layout_height="5dp"
	    android:background="@color/white"
	    android:id="@+id/cursor"
	    android:contentDescription="@string/app_name"
	    />
</LinearLayout>
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewpage"
        />
</LinearLayout>
