<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightcolor"
        android:orientation="vertical" >
		
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:id="@+id/framelayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" >

                <ImageView
                    android:id="@+id/videoimg"
                    android:layout_width="110dp"
                    android:layout_height="140dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/defaultcovers"
                    android:visibility="invisible" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_subject_play"
                    android:focusable="true"
                    android:clickable="true"
                    android:id="@+id/playB"
                    android:visibility="invisible" />
            </FrameLayout>

            <RatingBar
                android:id="@+id/iratingbar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/framelayout1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/framelayout1"
                android:max="5"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/iscoretext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iratingbar"
                android:layout_toRightOf="@id/iratingbar"
                android:gravity="center"
                android:maxLines="1"
                android:maxWidth="30dp"
                android:paddingLeft="5dp"
                android:text="@string/app_name"
                android:textSize="12sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/commentnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iscoretext"
                android:layout_toRightOf="@id/iscoretext"
                android:gravity="center"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:text="@string/app_name"
                android:textSize="12sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/showdate"
                style="@style/TextStyle.BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/iratingbar"
                android:layout_below="@id/iratingbar"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/movietype"
                style="@style/TextStyle.BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/showdate"
                android:layout_below="@id/showdate"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textSize="15sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/moviecountry"
                style="@style/TextStyle.BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/movietype"
                android:layout_below="@id/movietype"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textSize="15sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/choice"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@id/moviecountry"
                android:layout_below="@id/moviecountry"
                android:layout_marginTop="5dp"
                android:background="@drawable/mystylebutton"
                android:gravity="center"
                android:text="@string/choice"
                android:textSize="12sp"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/iwantsee"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:text="@string/iwantsee"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/ihavesee"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginRight="25dp"
                android:layout_toRightOf="@id/iwantsee"
                android:text="@string/ihavesee"
                android:textSize="18sp"
                android:visibility="invisible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/introduceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="5"
            android:paddingLeft="10dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="invisible" />

        <com.android.doubanmovie.layout.MyGridView
            android:id="@+id/peopleGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:numColumns="1"
            android:stretchMode="columnWidth"
            android:focusable="false"
            />
        <com.android.doubanmovie.layout.MyListView
            android:id="@+id/peopleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:focusable="false"
		    />
    </LinearLayout>

</ScrollView>